# project-39

./: .gitignore  Makefile  flake.nix  shell.nix
data/objs/1/: meta.json
data/objs/10/: meta.json
data/objs/11/: meta.json
data/objs/12/: meta.json
data/objs/13/: meta.json
data/objs/14/: meta.json
data/objs/15/: meta.json
data/objs/16/: meta.json
data/objs/17/: meta.json
data/objs/18/: meta.json
data/objs/19/: meta.json
data/objs/2/: meta.json
data/objs/20/: meta.json
data/objs/3/: meta.json
data/objs/4/: meta.json
data/objs/5/: meta.json
data/objs/6/: meta.json
data/objs/7/: meta.json
data/objs/8/: meta.json
data/objs/9/: meta.json
project-39-be/: .env  Cargo.toml  build.rs
project-39-be/src/: lib.rs  main.rs  obj_store.rs  token.rs  user.rs  utils.rs
project_39_fe/: README.md  analysis_options.yaml  pubspec.yaml
project_39_fe/android/app/: build.gradle
project_39_fe/ios/Runner/: Info.plist
project_39_fe/ios/Runner.xcodeproj/: project.pbxproj
project_39_fe/lib/: 1.dart  SplashScreen.dart  adopt.dart  card.dart  fab.dart  home.dart  lingy.dart  login.dart  main.dart  maino.dart  menum.dart  register.dart  rpc.dart  test.dart  upload.dart  user.dart
project_39_fe/lib/src/: constant.dart  home.dart  login.dart
project_39_fe/linux/: CMakeLists.txt  my_application.cc
project_39_fe/test/: widget_test.dart
project_39_fe/web/: index.html  manifest.json
project_39_fe/windows/: CMakeLists.txt
scripts/: debug-fe.sh  prepare-env.sh  prepare-test-db.sh  start-minio.sh  start-redis.sh  start_all.sh
scripts/sql/: init.sql
(+9 files in other folders)
