[package]
name = "project-39-be"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
